--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^1.1.3",
+    "@googlemaps/google-maps-services-js": "^3.3.41",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "express": "^4.18.2",
     "fhevmjs": "^0.2.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "log4js": "^6.9.1",
+    "node-telegram-bot-api": "^0.64.0",
+    "socket.io": "^4.7.2"
   }
 }
