--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/maps": "^1.1.3",
     "@googlemaps/google-maps-services-js": "^3.3.41",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
