--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "node-telegram-bot-api": "^0.64.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "web3": "^4.2.2"
   }
 }
