--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
+    "ethereum-event-processor": "^5.1.2",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "fhevmjs": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
