--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/maps": "^1.1.3",
     "@googlemaps/google-maps-services-js": "^3.3.41",
     "@googlemaps/js-api-loader": "^1.16.2",
+    "async-mutex": "^0.4.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
