--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethereum-event-processor": "^5.1.2",
-    "express": "^4.18.2",
-    "fhevmjs": "^0.3.1",
     "ethers": "^5.7.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
+    "express-slow-down": "^2.0.1",
+    "fhevmjs": "^0.3.1",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "node-telegram-bot-api": "^0.64.0",
