--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "dotenv": "^16.3.1",
     "ethereum-event-processor": "^5.1.2",
     "ethers": "^5.7.2",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "express-slow-down": "^2.0.1",
     "fhevmjs": "^0.4.0",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.4",
     "node-telegram-bot-api": "^0.64.0",
+    "pg": "^8.11.5",
     "socket.io": "^4.7.2",
     "web3": "^4.2.2"
   }
